--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -349,13 +349,13 @@
                  </div>
             </div>
              <div class=" col-12 row">
-                <div class="col-1">@L["Logistic"]</div>
+                <div class="col-2">@L["Logistic"]</div>
                  <div class="col-2">@L["FreeShipping"]</div>
             
                  <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.FreeShipping"></Switch></div>
             </div>
             <div class="col-12 row">
-                <div class="col-1"></div>
+                <div class="col-2"></div>
                <div class="col-2">
                 @L["ExcludeShippingMethod"]
             </div>
@@ -379,26 +379,26 @@
             
             </div>
                 <div class=" col-12 row">
-                <div class="col-1"></div>
+                <div class="col-2"></div>
                  <div class="col-2">@L["AllowShipToOuterIsland"]</div>
             
                  <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.AllowShipToOuterTaiwan"></Switch></div>
             </div>
                 <div class=" col-12 row">
-                <div class="col-1"></div>
+                <div class="col-2"></div>
                  <div class="col-2">@L["AllowShipToOverSea"]</div>
             
                  <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.AllowShipOversea"></Switch></div>
             </div>
                <div class=" col-12 row">
-                   <div class="col-1"></div>
+                   <div class="col-2"></div>
                 <div class="col-2">@L["ExpectDeliveryDate"]</div>
                 <div class="col-4"><DateEdit TValue="DateTime?" Class="form-control" @bind-Date=EditGroupBuyDto.ExpectShippingDateTo  Placeholder="@L["StartDate"].ToString()" /></div>
                  <div class="col-4"><DateEdit TValue="DateTime?"  Class="form-control" @bind-Date=EditGroupBuyDto.ExpectShippingDateFrom  Placeholder="@L["EndDate"].ToString()" /></div>
             </div>
           
               <div class="col-12 row">
-                <div class="col-1">@L["GateWay"]</div>
+                <div class="col-2">@L["GateWay"]</div>
                  <div class="col-2">@L["PaymentMethod"]</div>
             
                  <div class="col-4">  <Radio TValue="bool" Group="Payment" Value=EditGroupBuyDto.IsDefaultPaymentGateWay>
@@ -407,7 +407,7 @@
        </div>
             </div>
                    <div class="col-12 row">
-                <div class="col-1"></div>
+                <div class="col-2"></div>
                  <div class="col-2"></div>
             
                  <div class="col-1">    <Radio TValue="bool" Group="Payment" Value="@PaymentMethodCheck" > </Radio></div>
@@ -429,32 +429,32 @@
        
             </div>
              <div class=" col-12 row">
-                <div class="col-1">@L["Invoice"]</div>
+                <div class="col-2">@L["Invoice"]</div>
                  <div class="col-2">@L["IssueInvoice"]</div>
             
                  <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.IssueInvoice"></Switch></div>
             </div>
            <div class=" col-12 row">
-                <div class="col-1"></div>
+                <div class="col-2"></div>
                  <div class="col-2 form-label">@L["AutoIssueTriplicateInvoice"]</div>
             
                  <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.AutoIssueTriplicateInvoice"></Switch></div>
             </div>
              <div class=" col-12 row">
-                <div class="col-1"></div>
+                <div class="col-2"></div>
                  <div class="col-2 form-label">@L["InvoiceComment"]</div>
             
                  <div class="col-8"> <InputTextArea class="form-control"   maxlength="200" @bind-Value="@EditGroupBuyDto.InvoiceNote"></InputTextArea></div>
             </div>
             <Divider></Divider>
              <div class=" col-12 row">
-                <div class="col-1 mx-1">@L["AdvanceSetting"]</div>
+                <div class="col-2 mx-1">@L["AdvanceSetting"]</div>
                  <div class="col-2 form-label">@L["HideCredention"]</div>
             
                  <div class="col-4"> <Switch TValue="bool" @bind-Checked="@EditGroupBuyDto.ProtectPrivacyData"></Switch></div>
             </div>
                 <div class=" col-12 row">
-           <div class="col-1"></div>
+           <div class="col-2"></div>
             <div class="col-2">
                 <label>@L["InviteCode"]</label>
             </div>
@@ -465,7 +465,7 @@
             
         </div>
          <div class=" col-12 row">
-              <div class="col-1"></div>
+              <div class="col-2"></div>
              <div class="col-2">
                 <label>@L["ProfitShare"]</label>
             </div>
@@ -474,7 +474,7 @@
             </div>
             </div>
              <div class=" col-12 row">
-              <div class="col-1"></div>
+              <div class="col-2"></div>
              <div class="col-2">
                 <label>@L["FaceBookPixelID"]</label>
             </div>
@@ -483,7 +483,7 @@
             </div>
             </div>
              <div class=" col-12 row">
-              <div class="col-1"></div>
+              <div class="col-2"></div>
              <div class="col-2">
                 <label>@L["FaceBookID"]</label>
             </div>
@@ -492,7 +492,7 @@
             </div>
             </div>
              <div class=" col-12 row">
-              <div class="col-1"></div>
+              <div class="col-2"></div>
              <div class="col-2">
                 <label>@L["IGID"]</label>
             </div>
@@ -501,7 +501,7 @@
             </div>
             </div>
              <div class=" col-12 row">
-              <div class="col-1"></div>
+              <div class="col-2"></div>
              <div class="col-2">
                 <label>@L["LINEID"]</label>
             </div>
@@ -510,7 +510,7 @@
             </div>
             </div>
              <div class=" col-12 row">
-              <div class="col-1"></div>
+              <div class="col-2"></div>
              <div class="col-2">
                 <label>@L["GAID"]</label>
             </div>
@@ -519,7 +519,7 @@
             </div>
             </div>
              <div class=" col-12 row">
-              <div class="col-1"></div>
+              <div class="col-2"></div>
              <div class="col-2">
                 <label>@L["GTM"]</label>
             </div>
@@ -529,7 +529,7 @@
             </div>
     <Divider></Divider>
           <div class=" col-12 row">
-              <div class="col-2"><label>@L["ChooseModule"]</label></div>
+            <div class="col-2"><label>@L["AddModule"]</label></div>
           
             <div class="col-3">
                 <Dropdown>
