--- a/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
+++ b/src/Kooco.Pikachu.Blazor/Pages/_Host.cshtml
@@ -23,6 +23,7 @@
 
     <link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
     <link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+    <link href="~/global-styles.css" rel="stylesheet">
 
 
     <script src="~/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
