--- a/src/Kooco.Pikachu.Blazor/wwwroot/global-styles.css
+++ b/src/Kooco.Pikachu.Blazor/wwwroot/global-styles.css
@@ -3,7 +3,7 @@ body {
 }
 
 :root .lpx-brand-logo {
-    /*    --lpx-logo: url('https://kooco.oss-cn-hongkong.aliyuncs.com/logo.png ');
-    --lpx-logo-icon: url('https://kooco.oss-cn-hongkong.aliyuncs.com/logo-thumbnail ');*/
-    background-image: url('https://kooco.oss-cn-hongkong.aliyuncs.com/logo.png')!important;
+        --lpx-logo: url('https://kooco.oss-cn-hongkong.aliyuncs.com/logo.png ');
+    --lpx-logo-icon: url('https://kooco.oss-cn-hongkong.aliyuncs.com/logo-thumbnail ');
+/*    background-image: url('https://kooco.oss-cn-hongkong.aliyuncs.com/logo.png')!important;*/
 }
