--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -344,16 +344,21 @@
             <div class="col-2">@L["Gateway"]</div>
             <div class="col-2">@L["PaymentMethod"]</div>
             <div class="col-4">  
-                <Radio TValue="bool" Group="PaymentGateway" Checked="EditGroupBuyDto.IsDefaultPaymentGateWay" CheckedChanged="() => EditGroupBuyDto.IsDefaultPaymentGateWay = true">
-                    @L["DefaultPaymentGateWay"]
-                </Radio>
+                <div class="form-check">
+                    <input type="radio" class="form-check-input" name="PaymentGateway" id="payment-gateway-1" checked="@EditGroupBuyDto.IsDefaultPaymentGateWay" @onclick="() => EditGroupBuyDto.IsDefaultPaymentGateWay = true" />
+                    <label class="form-check-label" for="payment-gateway-1">
+                        @L["DefaultPaymentGateWay"]
+                    </label>
+                </div>
             </div>
         </div>
         <div class="row">
             <div class="col-2"></div>
             <div class="col-2"></div>
             <div class="col-1">    
-                <Radio TValue="bool" Group="PaymentGateway" Checked="!EditGroupBuyDto.IsDefaultPaymentGateWay" CheckedChanged="() => EditGroupBuyDto.IsDefaultPaymentGateWay = false"></Radio>
+                <div class="form-check">
+                    <input type="radio" class="form-check-input" name="PaymentGateway" id="payment-gateway-2" checked="@(!EditGroupBuyDto.IsDefaultPaymentGateWay)" @onclick="() => EditGroupBuyDto.IsDefaultPaymentGateWay = false" />
+                </div>
             </div>
             <div class="col-7">
                 <div class="col-7 form-control"  style="background-color:white">
